tdf#85911 docx: export comment initials

Change-Id: I1437c197312911a15a50715235d840b24117bfba